[metadata]
name = pythonimmediate-tex
version = 0.0.1
author = user202729
description = Python helper for TeX library to run Python code
long_description = file: README.md
long_description_content_type = text/markdown
license = LPPL 1.3c
url = https://github.com/user202729/TeXlib
classifiers =
    License :: OSI Approved
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Topic :: Text Processing :: Markup :: LaTeX

[options]
packages = pythonimmediate

